--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="app_name">ParkIt</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="check_box_onstreet">Show street parking</string>
+    <string name="check_box_offstreet">Show garage parking</string>
 </resources>
